# geant4-electron-calorimeter

./: CMakeLists.txt  README.md
analysis/: edep_h1_Edep.csv  plot_edep.py
include/: CalorimeterSD.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh
src/: CalorimeterSD.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  main.cc
